Overflow problem fixed
I fixed the overflow problem in "The Basics" area example.

--- a/src/css/docs.css
+++ b/src/css/docs.css
@@ -204,6 +204,7 @@ img.cache {
 
 .well h1.ng-binding {
   margin: 0;
+  word-break: break-all;
 }
 
 .no-margins {
